--- a/paper/Examples.lagda.tex
+++ b/paper/Examples.lagda.tex
@@ -3,13 +3,12 @@
 
 \begin{code}[hide]
 {-# OPTIONS --rewriting #-}
-open import Data.Sum hiding (reduce; swap)
-open import Data.Product using (_×_; _,_; ∃; ∃-syntax)
-open import Data.Nat using (ℕ; zero; suc)
-open import Data.Fin using (zero; suc; #_)
-open import Data.List.Base using (List; []; _∷_; [_]; _++_)
 open import Function using (_$_)
-open import Data.Maybe
+open import Data.Sum using (inj₁; inj₂)
+open import Data.Product using (_×_; _,_; ∃; ∃-syntax)
+open import Data.Fin using (zero; suc; #_)
+open import Data.List.Base using ([]; _∷_; [_])
+open import Relation.Unary
 
 open import Type
 open import Context
@@ -18,10 +17,10 @@ open import Process
 open import DeadlockFreedom using (deadlock-freedom)
 \end{code}
 
-In this section we illustrate a few simple examples of processes. We start by
-encoding the type of a boolean value being produced as a choice between ``going
-left'' (which we interpret as true) and ``going right'' (which we interpret as
-false).
+In this section we illustrate a few simple examples of processes encoded in our
+formalization. We start by encoding the type of a boolean value being produced
+as a choice between ``going left'' (which we interpret as true) and ``going
+right'' (which we interpret as false).
 
 \begin{code}
 𝔹 : Type
@@ -31,31 +30,35 @@ false).
 The boolean constants are processes that perform one of these choices.
 
 \begin{code}
-true : Process [ 𝔹 ]
-true = left (< ≫) close
+true : Proc [ 𝔹 ]
+true = select (ch ⟨ < ≫ ⟩ inj₁ (close ch))
 
-false : Process [ 𝔹 ]
-false = right (< ≫) close
+false : Proc [ 𝔹 ]
+false = select (ch ⟨ < ≫ ⟩ inj₂ (close ch))
 \end{code}
 
 We can use the host language for programming higher-order processes. For
 example, we can define a conditional process thus:
 
 \begin{code}
-if_else : ∀{Γ} → Process Γ → Process Γ → Process (dual 𝔹 ∷ Γ)
-if P else Q = case (< ≫) (wait (< ≫) P) (wait (< ≫) Q)
+if_else : ∀{Γ} → Proc Γ → Proc Γ → Proc (dual 𝔹 ∷ Γ)
+if P else Q = curry∗ case ch (< ≫) ( wait (ch ⟨ < ≫ ⟩ P)
+                                   , wait (ch ⟨ < ≫ ⟩ Q))
 \end{code}
 
 A term $\AgdaFunction{if}~P~\AgdaFunction{else}~Q$ is a process that waits for a
 boolean value (\cf the $\AgdaFunction{dual}~\mathbb{B}$ type at the front of its
 typing context) and continues as either $P$ or $Q$ depending on whether it
-receives true or false.
-%
-We can then define a process $\AgdaFunction{drop}~P$ that waits for consumes a
-boolean and continues as $P$ regardless of its value.
+receives true or false. We use \AgdaFunction{curry∗} (defined in
+\Cref{sec:context-agda}) to curry the constructor
+\AgdaInductiveConstructor{case} so that we can supply its arguments one by one
+saving a few parentheses and reducing clutter.
+
+Next we define a process $\AgdaFunction{drop}~P$ that consumes a boolean and
+continues as $P$ regardless of its value.
 
 \begin{code}
-drop : ∀{Γ} → Process Γ → Process (dual 𝔹 ∷ Γ)
+drop : ∀{Γ} → Proc Γ → Proc (dual 𝔹 ∷ Γ)
 drop P = if P else P
 \end{code}
 
@@ -63,14 +66,19 @@ Using these higher-order forms, it is easy to define the usual boolean
 connectives.
 
 \begin{code}
-!!_ : Process [ 𝔹 ] → Process [ 𝔹 ]
-!!_ B = cut ≫ B (if false else true)
+!!_ : Proc [ 𝔹 ] → Proc [ 𝔹 ]
+!!_ B = curry∗ cut B ≫ (if false else true)
 
-_&&_ _||_  : Process [ 𝔹 ] → Process [ 𝔹 ] → Process [ 𝔹 ]
-A && B   = cut ≫ A (cut ≫ B (if (link (< ≫)) else (drop false)))
+_&&_ _||_  : Proc [ 𝔹 ] → Proc [ 𝔹 ] → Proc [ 𝔹 ]
+A && B   =  curry∗ cut A ≫ $
+            curry∗ cut B ≫ $
+            if (curry∗ link ch (< ≫) ch) else (drop false)
 A || B   = !! ((!! A) && (!! B))
 \end{code}
 
+The function \AgdaFunction{\$} is defined in Agda's standard library and denotes
+function application. We use it here as ``separator'' to save a few parentheses.
+%
 Note the use of \AgdaInductiveConstructor{cut}s for combining a process that
 produces a boolean value with a process that consumes a boolean value and the
 use of \AgdaInductiveConstructor{link} for copying a boolean value from one
@@ -80,14 +88,14 @@ Here we have chosen to define the disjunction \AgdaFunction{||} from the
 conjunction \AgdaFunction{\&\&} and negation \AgdaFunction{!!} using De Morgan's
 laws.
 
-If we wish to test our definitions, we can implement a simple (lazy) evaluator
-using the deadlock freedom property. We have not proved a termination result,
-but since linear logic enjoys cut elimination we can safely annotate the
-evaluator as terminating.
+If we wish to test our definitions, we can implement a simple evaluator using
+the deadlock freedom property. We have not proved a termination result, but
+since linear logic enjoys cut elimination we can safely annotate the evaluator
+as terminating.
 
 \begin{code}
 {-# TERMINATING #-}
-eval : ∀{Γ} → Process Γ → Process Γ
+eval : ∀{Γ} → Proc Γ → Proc Γ
 eval P with deadlock-freedom P
 ... | inj₁ (Q , _ , _)  = Q
 ... | inj₂ (Q , _)      = eval Q
@@ -96,7 +104,7 @@ eval P with deadlock-freedom P
 Now if we ask Agda to normalize the goal
 $\AgdaFunction{eval}~(\AgdaFunction{false}~\AgdaFunction{||}~\AgdaFunction{false})$
 we obtain
-$\AgdaInductiveConstructor{right}~(\AgdaInductiveConstructor{<}~\AgdaInductiveConstructor{•})~\AgdaInductiveConstructor{close}$,
+$\AgdaInductiveConstructor{select}~(\AgdaInductiveConstructor{ch~⟨~<~•~⟩~inj₂}~(\AgdaInductiveConstructor{close~ch}))$,
 that is the definition of \AgdaFunction{false}, as expected.
 
 For the example that follows, it is convenient to introduce the linear
@@ -113,32 +121,31 @@ that waits for a value and sends it back unchanged. The server is polymorphic in
 the sense that the type of the value is arbitrary and denoted by the type
 variable $X$. The notation $\AgdaFunction{\#}~n$ is defined in Agda's standard
 library and creates an element of \AgdaDatatype{Fin} from the natural number
-$n$. The function \AgdaFunction{\$} is also defined in the standard library and
-denotes function application. We use it here as ``command separator'' to save a
-few parentheses.
+$n$.
 
 \begin{code}
-echo :  let X = var (# 0) in
-        Process [ `! (`∀ (X ⊸ X)) ]
-echo =  server (< ≫) un-[] $
-        all (< ≫) λ X →
-        join (< ≫) $
-        link (< ≫)
+echo : let X = var (# 0) in
+       Proc [ `! (`∀ (X ⊸ X)) ]
+echo = curry∗ server ch (< ≫)
+             ( un-[]
+             , curry∗ all ch (< ≫) λ X →
+               curry∗ join ch (< ≫) $
+               curry∗ link ch (< ≫) ch)
 \end{code}
 
 We can test the server by connecting it with a \AgdaInductiveConstructor{client}
 that sends true to it.
 
 \begin{code}
-echo-true : Process [ 𝔹 ]
-echo-true = cut ≫ echo (client (< ≫) $
-                       ex (< ≫) $
-                       fork (< ≫) ≫ true (link (< ≫)))
+echo-true : Proc [ 𝔹 ]
+echo-true = curry∗ cut echo ≫ $
+            curry∗ client ch (< ≫) $
+            curry∗ ex ch (< ≫) $
+            curry∗ fork ch (< ≫) $ true ⟨ ≫ ⟩ curry∗ link ch (< ≫) ch
 \end{code}
 
-If we ask Agda to evaluate this process we obtain
-$\AgdaInductiveConstructor{left}~(\AgdaInductiveConstructor{<}~\AgdaInductiveConstructor{•})~\AgdaInductiveConstructor{close}$,
-that is the definition of \AgdaFunction{true} as expected.
+If we ask Agda to evaluate this process we obtain \AgdaFunction{true}, as
+expected.
 
 From these examples it should be clear that writing \Calculus processes in Agda
 is not entirely straightforward, but it is still doable with a little effort.
@@ -149,16 +156,3 @@ context splittings as soon as the seeked channel has been reached.
 %
 Either way, the formalization is meant to study the meta-theory of \Calculus
 rather than implementing a user-friendly DSL for it.
-
-% \begin{code}
-% ⊗-comm : let X = var (# 1) in
-%          let Y = var (# 0) in
-%          Process [ `∀ (`∀ ((X ⊗ Y) ⊸ (Y ⊗ X))) ]
-% ⊗-comm = all (< ≫) λ X →
-%          all (< ≫) λ Y →
-%          join (< ≫) $
-%          join (> < ≫) $
-%          fork (> > < ≫) (< ≫)
-%               (link (< ≫))
-%               (link (< ≫))
-% \end{code}
