--- a/paper/Process.tex
+++ b/paper/Process.tex
@@ -63,7 +63,7 @@ least three reasons:
   the overall number of datatypes defined in the formalization;
 \item the typing preservation results are embedded in the very definition of the
   operational semantics of processes and need not require separate proofs
-  (\Cref{sec:agda-semantics}).
+  (\Cref{sec:congruence-agda,sec:reduction-agda}).
 \end{itemize}
 
 Channels are not given any name. Instead, they are represented as terms
