--- a/paper/Type.lagda.tex
+++ b/paper/Type.lagda.tex
@@ -116,7 +116,7 @@ substitutes \emph{all} variables of a (pre)type. The definition of
 \AgdaFunction{subst} relies on some auxiliary functions for \emph{renaming} type
 variables and \emph{lifting} substitutions across quantifiers. All such
 definitions are straightforward adaptations of those described by
-\cite{KokkeWadler}.
+\cite{KokkeSiekWadler20}.
 
 \begin{code}
 subst : ∀{m n} → (Fin m → PreType n) → PreType m → PreType n
