--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -16,7 +16,7 @@
 %%% NOTATION %%%
 %%%%%%%%%%%%%%%%
 
-\newcommand{\Calculus}{\textsf{lin}\CP}
+\newcommand{\Calculus}{\texorpdfstring{\textsf{lin}\CP}{linCP}}
 
 \newcommand{\eg}{e.g.\xspace}
 \newcommand{\ie}{i.e.\xspace}
