--- a/paper/main.bib
+++ b/paper/main.bib
@@ -172,6 +172,47 @@
   doi          = {10.1145/3703595.3705888},
 }
 
+@article{KokkeSiekWadler20,
+  author       = {Wen Kokke and
+                  Jeremy G. Siek and
+                  Philip Wadler},
+  title        = {Programming language foundations in Agda},
+  journal      = {Sci. Comput. Program.},
+  volume       = {194},
+  pages        = {102440},
+  year         = {2020},
+  doi          = {10.1016/J.SCICO.2020.102440},
+}
+
+@article{OHearnPym99,
+  author       = {Peter W. O'Hearn and
+                  David J. Pym},
+  title        = {The logic of bunched implications},
+  journal      = {Bull. Symb. Log.},
+  volume       = {5},
+  number       = {2},
+  pages        = {215--244},
+  year         = {1999},
+  doi          = {10.2307/421090},
+}
+
+@inproceedings{LindleyMorris15,
+  author       = {Sam Lindley and
+                  J. Garrett Morris},
+  editor       = {Jan Vitek},
+  title        = {A Semantics for Propositions as Sessions},
+  booktitle    = {Programming Languages and Systems - 24th European Symposium on Programming,
+                  {ESOP} 2015, Held as Part of the European Joint Conferences on Theory
+                  and Practice of Software, {ETAPS} 2015, London, UK, April 11-18, 2015.
+                  Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {9032},
+  pages        = {560--584},
+  publisher    = {Springer},
+  year         = {2015},
+  doi          = {10.1007/978-3-662-46669-8\_23},
+}
+
 @article{SanoKavanaghPientka23,
   author       = {Chuta Sano and
                   Ryan Kavanagh and
