--- a/paper/related.tex
+++ b/paper/related.tex
@@ -7,7 +7,7 @@ eliminati commenti
 eliminati esempi
 squeezed spazi (in generale sono significativi)
 
-\begin{table}
+\begin{table}[t]
     \newcommand{\textlabel}[1]{\rotatebox{90}{#1}}
     \newcommand{\CHECK}{\checkmark}
     \newcommand{\SessionPI}{session $\pi$}
