--- a/paper/Context.lagda.tex
+++ b/paper/Context.lagda.tex
@@ -146,7 +146,7 @@ module _ where
   splitting-example₂ = > < ≫
 \end{code}
 
-\begin{table}
+\begin{table}[t]
   \begin{tabular}{|lll|}
     \hline
     \textbf{Notation} & \textbf{Definition} & \textbf{Meaning} \\
@@ -174,7 +174,7 @@ point that it contributes substantially to the complexity of the formalization.
 For this reason, we invest some effort in defining a few abstractions that allow
 us to occasionally hide context splittings and enhance code readability.
 %
-Inspired by separation logic~\cite{Hoare} and
+Inspired by separation logic~\cite{OHearnPym99} and
 following~\citet{RouvoetPoulsenKrebbersVisser20}, we define the \emph{separating
 conjunction} $P \sand Q$ of two predicates $P$ and $Q$ over contexts:
 \begin{code}
