--- a/paper/Type.tex
+++ b/paper/Type.tex
@@ -631,7 +631,7 @@ substitutes \emph{all} variables of a (pre)type. The definition of
 \AgdaFunction{subst} relies on some auxiliary functions for \emph{renaming} type
 variables and \emph{lifting} substitutions across quantifiers. All such
 definitions are straightforward adaptations of those described by
-\cite{KokkeWadler}.
+\cite{KokkeSiekWadler20}.
 
 \begin{code}%
 \>[0]\AgdaFunction{subst}\AgdaSpace{}%
